--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 
     <div hj-cropify hj-cropify-options="{aspectRatio: 2}" coords="ctrl.coords">
 
-        <img ng-src="example/test.jpg" style="width:100%; height:100%; vertical-align:top; pointer-events: none;">
+	    <div class="padding"></div>
+
+        <img ng-src="example/test.jpg">
 
     </div>
+
+    <ul class="controls">
+	    <li ng-click="ctrl.reset()">Reset</li>
+	    <li ng-click="ctrl.setCrop()">Set Crop</li>
+    </ul>
 
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
