--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body ng-controller="ExampleCtrl as ctrl">
 
-    <hj-cropify coords="ctrl.coords" aspect-ratio="2">
+    <hj-cropify coords="ctrl.coords" aspect-ratio="ctrl.aspectRatio">
 
         <div class="padding"></div>
 
@@ -19,8 +19,9 @@
     </hj-cropify>
 
     <ul class="controls">
-        <li ng-click="ctrl.coords = {}">Reset</li>
-        <li ng-click="ctrl.setCrop()">Set Crop</li>
+        <li><button ng-click="ctrl.coords = {}">Reset</button></li>
+        <li><button ng-click="ctrl.setCrop()">Set Crop</button></li>
+        <li>Aspect Ratio: <input type="number" ng-model="ctrl.aspectRatio" min="0"></li>
     </ul>
 
     <pre>{{ctrl.coords}}</pre>
