--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <title>angular-cropify</title>
 
+    <link rel="stylesheet" type="text/css" href="angular-cropify.css">
     <link rel="stylesheet" type="text/css" href="example/styles.css">
 
 </head>
